fixed responsive on home page and added style to scrollbar on collectif page

--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -102,7 +102,7 @@
       padding: 1rem auto;
       border-top: 1px solid #d73a3b;
       border-bottom: 1px solid #d73a3b;
-      font-size: 1.5rem;
+      font-size: 1.5em;
   
       &__item {
           margin: 0.5rem;
@@ -128,6 +128,7 @@
   .header__nav__list {
       flex-direction: row;
       justify-content: space-evenly;
+      font-size: 0.8em;
 
       &__item {
           margin: 1rem 0.5rem;
@@ -145,17 +146,22 @@
 
 
 @media (min-width: 900px) {  
-  .header__title {
+  .header {
+    &__title {
       font-size: 5em;
-  }
-
-  .header__subtitle {
+    }
+    &__subtitle {
       font-size: 3em;
+    }
   }
-
 }
 
 @media (min-width: 1100px) {
+  .header {
+    &__nav__list {
+      font-size: 1.5em;
+    }
+  }
   .header__title {
       font-size: 6em;
   }
