--- a/pages/collectif/collectif.module.scss
+++ b/pages/collectif/collectif.module.scss
@@ -24,6 +24,7 @@
           justify-content: center;
           text-align: justify;
 
+
           & p {
             line-height: 1.5;
 
@@ -35,6 +36,21 @@
           }
         }
       }
+
+      &__container {
+        display: flex;
+
+        & div:nth-child(1), & div:nth-child(3) {
+          width: 5%;
+          text-align: center;
+          background-color: #ba4a5c;
+        }
+
+        & div:nth-child(3) {
+          order: 2;
+        }
+      }
+
       &__list {
         order: 1;
         width: 100%;
@@ -45,6 +61,19 @@
         display: flex;
         flex-flow: column wrap;
         align-items: center;
+
+        &::-webkit-scrollbar {
+          width: 7px;
+          height: 7px;
+          
+          &-thumb {
+            background: linear-gradient(15deg, #d73a3ab2 24%, #d73a3ab2 67%);
+          }
+
+          &-track {
+            background: #141414;
+          }
+        }
 
         &__item {
           width: 5rem;
@@ -75,21 +104,21 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-
+            
             & span {
               text-align: center;
               margin-bottom: 0.5rem;
+              word-wrap: break-word;
 
               &:nth-child(1) {
                 font-weight: bold;
                 text-transform: uppercase;
                 font-family: Archive, sans-serif;
-                font-size: 1.2em;
+                font-size: 0.8em;
               }
 
-              &:nth-child(2) {
-                color: #ba4a5c;
-                font-style: italic;
+              &:nth-child(2), &:nth-child(3) {
+                display: none;
               }
             }
           }
@@ -127,6 +156,38 @@
           width: 10rem;
           height: 10rem;
           margin-bottom: 0.5rem;
+
+          &__info {
+            opacity: 0;
+            transition: 1s;
+            width: 100%;
+            height: 100%;
+            background-color: #040404bb;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            & span {
+              text-align: center;
+              margin-bottom: 0.5rem;
+
+              &:nth-child(1) {
+                font-weight: bold;
+                text-transform: uppercase;
+                font-family: Archive, sans-serif;
+                font-size: 1.2em;
+              }
+
+              &:nth-child(2), &:nth-child(3) {
+                display: block;
+              }
+
+              &:nth-child(2) {
+                color: #ba4a5c;
+                font-style: italic;
+              }
+            }
+          }
         }
       }
     }
@@ -194,3 +255,4 @@
     margin: 1rem;
   }
 }
+
